--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
                     <!-- <a href="#"><img src="images/logo.png" alt="hodlbsv logo"></a> -->
                 </div>
                 <ul class="nav-links">
-                    <li><a href="index.html">articles</a></li>
+                    <li><a href="#features">articles</a></li>
                     <li><a href="about.html">about</a></li>
-                    <li><a href="https://changelly.com/" target=“_blank”>lockapps</a></li>
+                    <li><a href="#lockapps">lockapps</a></li>
                     <li><a href="https://taleofshua.com/market/hodl/" target=“_blank”>$hodl</a></li>
                 </ul>
             </div>
@@ -27,12 +27,13 @@
             <div class="hero-content">
                 <h1>hodlbsv</h1>
                 <p>hodlbsv is an organization not based in zug switzerland that supports the bsv ecosystem by buying and locking up bsv</p>
-                <a href="#" class="btn btn-primary">BUY BSV</a>
-                <a href="#" class="btn btn-secondary">LOCK BSV</a>
+                <a href="https://changelly.com/" target=“_blank” class="btn btn-primary">BUY BSV</a>
+                <a href="https://www.hodlocker.com/" target=“_blank” class="btn btn-secondary">LOCK BSV</a>
 
             </div>
         </div>
     </section>
+    <section id="features">
     <section class="features">
         <div class="container">
             <div class="feature">
@@ -104,9 +105,41 @@
                 <h2>sha256 has won</h2>
                 <p>network effects and why only bitcoin itself can flip btc</p>
             </div>
-
             </div>
+        </section>
 
+        <section id="memes" class="memes">
+            <div class="container">
+                <h2>memes</h2>
+                <div class="meme">
+                <img src="images/dontshoot.jpg" alt="">
+                </div>
+                <div class="meme">
+                <img src="images/greenlines.jpg" alt="">
+                </div>
+                <div class="meme">
+                    <img src="images/notselling.jpg" alt="">
+                </div>
+                <div class="meme">
+                    <img src="images/bitcoinscaledversion.jpg" alt="">
+                </div>
+                <div class="meme">
+                    <img src="images/longlock.jpg" alt="">
+                </div>
+                <div class="meme">
+                    <img src="images/jekliuhousebet.jpg" alt="">
+                </div>
+                <div class="meme">
+                    <img src="images/mcap.jpg" alt="">
+                </div>
+                <div class="meme">
+                    <img src="images/raisebtcblock.jpg" alt="">
+                </div>
+                <!-- Add more meme divs as needed -->
+            </div>
+        </section>
+
+                <section id="lockapps">
                 <section class="projects">
                     <div class="container">
                         <h2>bsv lockapps</h2>
@@ -180,12 +213,11 @@
                                 <a href="https://flipbtc.xyz/" style="color: black"; onmouseover="this.style.color='white';" onmouseout="this.style.color='black';">https://flipbtc.xyz/</a>
                                 <p></p>
                             </div>
-
-                            
                             <!-- Add more project boxes as needed -->
                         </div>
                     </div>
                 </section>
+            </section>
                 </div>
             </body>
 
