--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 </div>
                 <ul class="nav-links">
                     <li><a href="#features">articles</a></li>
-                    <li><a href="about.html">about</a></li>
+                    <li><a href="#memes">memes</a></li>
                     <li><a href="#lockapps">lockapps</a></li>
                     <li><a href="https://taleofshua.com/market/hodl/" target=“_blank”>$hodl</a></li>
                 </ul>
@@ -26,7 +26,7 @@
         <div class="container">
             <div class="hero-content">
                 <h1>hodlbsv</h1>
-                <p>hodlbsv is an organization not based in zug switzerland that supports the bsv ecosystem by buying and locking up bsv</p>
+                <p>hodlbsv is an organization not based in zug switzerland that supports bitcoin by buying and locking up bsv</p>
                 <a href="https://changelly.com/" target=“_blank” class="btn btn-primary">BUY BSV</a>
                 <a href="https://www.hodlocker.com/" target=“_blank” class="btn btn-secondary">LOCK BSV</a>
 
@@ -38,12 +38,12 @@
         <div class="container">
             <div class="feature">
                 <img src="feature1.jpg" alt="">
-                <h2>number go up tech</h2>
+                <a href=https://hodlnet.sh/search?q=number+go+up target="_blank" style="text-decoration:none"; color: white; onmouseover="this.style.color='#e6b800';" onmouseout="this.style.color='white';"><h2>number go up tech</h2></a>
                 <p>the number one marketing tool for any blockchain is the token price going up</p>
             </div>
             <div class="feature">
                 <img src="feature2.jpg" alt="">
-                <h2>necessity of degen culture</h2>
+                <a href=https://hodlnet.sh/search?q=degen target="_blank" style="text-decoration:none"; color: white; onmouseover="this.style.color='#e6b800';" onmouseout="this.style.color='white';"><h2>necessity of degen culture</h2></a>
                 <p>memecoins are lottery tickets we like to play</p>
             </div>
 
@@ -133,6 +133,9 @@
                     <img src="images/mcap.jpg" alt="">
                 </div>
                 <div class="meme">
+                    <img src="images/harrypotter.jpg" alt="">
+                </div>
+                <div class="meme">
                     <img src="images/raisebtcblock.jpg" alt="">
                 </div>
                 <!-- Add more meme divs as needed -->
@@ -146,71 +149,69 @@
                         <div class="project-grid">
                             <div class="project-box">
                                 <img src="project1.png" alt="">
-                                <h3>hodlocker</h3>
-                                <a href="https://www.hodlocker.com/">https://www.hodlocker.com/</a>
+                               <a href="https://www.hodlocker.com/"><h3>hodlocker</h3></a>
+                               <p>Enter the center of bitcoin - don't get psyop'd </p>
                             </div>
                             <div class="project-box bg-gold">
                                 <img src="project2.png" alt="">
-                                <h3>yours wallet</h3>
-                                <a href="https://yours.org/" style="color: black"; onmouseover="this.style.color='white';" onmouseout="this.style.color='black';">https://yours.org/</a>
+                                <h3><a href="https://yours.org/" target="_blank" style="color: black"; onmouseover="this.style.color='white';" onmouseout="this.style.color='black';">yours wallet</h3></a>
+                            <p>Open sourced web3 wallet - Yours.org is yours</p>                            
                             </div>
                             <div class="project-box">
                                 <img src="project3.png" alt="">
-                                <h3>hodlnet</h3>
-                                <a href="https://hodlnet.sh/">https://hodlnet.sh/</a>
+                                <a href="https://hodlnet.sh/"><h3>hodlnet</h3></a>
+                                <p>Lightning fast search engine for locked content</p>
                             </div>
                             <div class="project-box bg-gold">
                                 <img src="project4.png" alt="">
-                                <h3>flip btc</h3>
-                                <a href="https://flipbtc.xyz/" style="color: black"; onmouseover="this.style.color='white';" onmouseout="this.style.color='black';">https://flipbtc.xyz/</a>
-                                <p></p>
+                                <a href="https://flipbtc.xyz/" style="color: black"; onmouseover="this.style.color='white';" onmouseout="this.style.color='black';"><h3>flip btc</h3></a>
+                                <p>Will BSV flip BTC? Bet on it with options that can never be censored</p>
                             </div>
 
                             <div class="project-box">
                                 <img src="project1.png" alt="">
-                                <h3>simply stream</h3>
-                                <a href="https://simply-stream.vercel.app/">https://simply-stream.vercel.app/</a>
+                                <a href="https://simply-stream.vercel.app/"><h3>simply stream</h3></a>
+                                <p>Receive a daily stream of your locked bitcoins for retirement</p>
                             </div>
 
                             <div class="project-box bg-gold">
                                 <img src="project2.png" alt="">
-                                <h3>tale of shua</h3>
-                                <a href="https://yours.org/" style="color: black"; onmouseover="this.style.color='white';" onmouseout="this.style.color='black';">https://yours.org/</a>
+                                <a href="https://taleofshua.com/" style="color: black"; onmouseover="this.style.color='white';" onmouseout="this.style.color='black';"><h3>tale of shua</h3></a>
+                                <p>Marketplace interface for bitcoin's shared orderbook</p>
                             </div>
 
                             <div class="project-box">
                                 <img src="project3.png" alt="">
-                                <h3>babel markets</h3>
-                                <a href="https://hodlnet.sh/">https://hodlnet.sh/</a>
+                                <a href="https://babel.markets/"> <h3>babel markets</h3></a>
+                                <p>>Another interface for bitcoin's shared orderbook</p>
                             </div>
                             <div class="project-box bg-gold">
                                 <img src="project4.png" alt="">
-                                <h3>maplocks</h3>
-                                <a href="https://flipbtc.xyz/" style="color: black"; onmouseover="this.style.color='white';" onmouseout="this.style.color='black';">https://flipbtc.xyz/</a>
-                                <p></p>
+                                <a href="https://maplocks.com/" style="color: black"; onmouseover="this.style.color='white';" onmouseout="this.style.color='black';"><h3>maplocks</h3></a>
+                                <p>Lock bitcoins to real world locations</p>
                             </div>
 
                             <div class="project-box">
                                 <img src="project1.png" alt="">
-                                <h3>locktomint</h3>
-                                <a href="https://www.hodlocker.com/">https://www.hodlocker.com/</a>
+                                <a href="https://locktomint.com/"><h3>locktomint</h3></a>
+                                <p>Receive fungible shitcoins for locking bitcoins</p>
                             </div>
 
                             <div class="project-box bg-gold">
                                 <img src="project2.png" alt="">
                                 <h3>shuallet</h3>
-                                <a href="https://yours.org/" style="color: black"; onmouseover="this.style.color='white';" onmouseout="this.style.color='black';">https://yours.org/</a>
+                                <a href="https://taleofshua.com/" style="color: black"; onmouseover="this.style.color='white';" onmouseout="this.style.color='black';">shuallet</a>
                             </div>
 
                             <div class="project-box">
                                 <img src="project3.png" alt="">
                                 <h3>relayx</h3>
-                                <a href="https://hodlnet.sh/">https://hodlnet.sh/</a>
+                                <a href="https://relayx.com/">https://relayx.com/</a>
                             </div>
                             <div class="project-box bg-gold">
                                 <img src="project4.png" alt="">
                                 <h3>simply cash</h3>
-                                <a href="https://flipbtc.xyz/" style="color: black"; onmouseover="this.style.color='white';" onmouseout="this.style.color='black';">https://flipbtc.xyz/</a>
+                                <a href="https://simply.cash/" style="color: black"; onmouseover="this.style.color='white';" onmouseout="this.style.color='black';">https://simply.cash/</a>
                                 <p></p>
                             </div>
                             <!-- Add more project boxes as needed -->
