--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
         <div class="container">
             <div class="feature">
                 <img src="feature1.jpg" alt="">
-                <a href=https://hodlnet.sh/search?q=number+go+up target="_blank" style="text-decoration:none"; color: white; onmouseover="this.style.color='#e6b800';" onmouseout="this.style.color='white';"><h2>number go up tech</h2></a>
+                <a href=https://hodlnet.sh/search?q=number+go+up target="_blank" style="text-decoration:none;color:white;""><h2>number go up tech</h2></a>
                 <p>the number one marketing tool for any blockchain is the token price going up</p>
             </div>
             <div class="feature">
                 <img src="feature2.jpg" alt="">
-                <a href=https://hodlnet.sh/search?q=degen target="_blank" style="text-decoration:none"; color: white; onmouseover="this.style.color='#e6b800';" onmouseout="this.style.color='white';"><h2>necessity of degen culture</h2></a>
+                <a href=https://hodlnet.sh/search?q=degen target="_blank" style="text-decoration:none; color: white;"><h2>necessity of degen culture</h2></a>
                 <p>memecoins are lottery tickets we like to play</p>
             </div>
 
