--- a/index.html
+++ b/index.html
@@ -231,10 +231,7 @@
                     <!-- <a href="#"><img src="images/logo.png" alt="hodlbsv logo"></a> -->
                 </div>
                 <ul class="nav-links">
-                    <li><a href="#">home</a></li>
-                    <li><a href="#">about</a></li>
-                    <li><a href="#">buy bsv</a></li>
-                    <li><a href="#">buy hodl</a></li>
+                    <p style="color:grey">site built by regards for regards</p>
                 </ul>
             </div>
         </nav>
