--- a/index.html
+++ b/index.html
@@ -137,6 +137,9 @@
                     <img src="images/harrypotter.jpg" alt="">
                 </div>
                 <div class="meme">
+                    <img src="images/regarded.jpg" alt="">
+                </div>
+                <div class="meme">
                     <img src="images/raisebtcblock.jpg" alt="">
                 </div>
                 <!-- Add more meme divs as needed -->
@@ -150,7 +153,7 @@
                         <div class="project-grid">
                             <div class="project-box">
                                 <img src="project1.png" alt="">
-                               <a href="https://www.hodlocker.com/"><h3>hodlocker</h3></a>
+                               <a href="https://www.hodlocker.com/" target="_blank"><h3>hodlocker</h3></a>
                                <p>Enter the center of bitcoin - don't get psyop'd </p>
                             </div>
                             <div class="project-box bg-gold">
@@ -160,60 +163,59 @@
                             </div>
                             <div class="project-box">
                                 <img src="project3.png" alt="">
-                                <a href="https://hodlnet.sh/"><h3>hodlnet</h3></a>
+                                <a href="https://hodlnet.sh/" target="_blank"><h3>hodlnet</h3></a>
                                 <p>Lightning fast search engine for locked content</p>
                             </div>
                             <div class="project-box bg-gold">
                                 <img src="project4.png" alt="">
-                                <a href="https://flipbtc.xyz/" style="color: black"; onmouseover="this.style.color='white';" onmouseout="this.style.color='black';"><h3>flip btc</h3></a>
+                                <a href="https://flipbtc.xyz/" target="_blank" style="color: black"; onmouseover="this.style.color='white';" onmouseout="this.style.color='black';"><h3>flip btc</h3></a>
                                 <p>Will BSV flip BTC? Bet on it with options that can never be censored</p>
                             </div>
 
                             <div class="project-box">
                                 <img src="project1.png" alt="">
-                                <a href="https://simply-stream.vercel.app/"><h3>simply stream</h3></a>
+                                <a href="https://simply-stream.vercel.app/" target="_blank"><h3>simply stream</h3></a>
                                 <p>Receive a daily stream of your locked bitcoins for retirement</p>
                             </div>
 
                             <div class="project-box bg-gold">
                                 <img src="project2.png" alt="">
-                                <a href="https://taleofshua.com/" style="color: black"; onmouseover="this.style.color='white';" onmouseout="this.style.color='black';"><h3>tale of shua</h3></a>
+                                <a href="https://taleofshua.com/" target="_blank" style="color: black"; onmouseover="this.style.color='white';" onmouseout="this.style.color='black';"><h3>tale of shua</h3></a>
                                 <p>Marketplace interface for bitcoin's shared orderbook</p>
                             </div>
 
                             <div class="project-box">
                                 <img src="project3.png" alt="">
-                                <a href="https://babel.markets/"> <h3>babel markets</h3></a>
+                                <a href="https://babel.markets/" target="_blank"> <h3>babel markets</h3></a>
                                 <p>>Another interface for bitcoin's shared orderbook</p>
                             </div>
                             <div class="project-box bg-gold">
                                 <img src="project4.png" alt="">
-                                <a href="https://maplocks.com/" style="color: black"; onmouseover="this.style.color='white';" onmouseout="this.style.color='black';"><h3>maplocks</h3></a>
+                                <a href="https://maplocks.com/" target="_blank" style="color: black"; onmouseover="this.style.color='white';" onmouseout="this.style.color='black';"><h3>maplocks</h3></a>
                                 <p>Lock bitcoins to real world locations</p>
                             </div>
 
                             <div class="project-box">
                                 <img src="project1.png" alt="">
-                                <a href="https://locktomint.com/"><h3>locktomint</h3></a>
+                                <a href="https://locktomint.com/" target="_blank"><h3>locktomint</h3></a>
                                 <p>Receive fungible shitcoins for locking bitcoins</p>
                             </div>
 
                             <div class="project-box bg-gold">
                                 <img src="project2.png" alt="">
-                                <h3>shuallet</h3>
-                                <a href="https://taleofshua.com/" style="color: black"; onmouseover="this.style.color='white';" onmouseout="this.style.color='black';">shuallet</a>
+                                <a href="https://taleofshua.com/" target="_blank" style="color: black"; onmouseover="this.style.color='white';" onmouseout="this.style.color='black';"><h3>shuallet</h3></a>
+                                <p>Basic wallet that works for mobile</p>
                             </div>
 
                             <div class="project-box">
                                 <img src="project3.png" alt="">
-                                <h3>relayx</h3>
-                                <a href="https://relayx.com/">https://relayx.com/</a>
+                                <a href="https://relayx.com/" target="_blank"><h3>relayx</h3></a>
+                                <p>Website is shutting down lol</p>
                             </div>
                             <div class="project-box bg-gold">
                                 <img src="project4.png" alt="">
-                                <h3>simply cash</h3>
-                                <a href="https://simply.cash/" style="color: black"; onmouseover="this.style.color='white';" onmouseout="this.style.color='black';">https://simply.cash/</a>
-                                <p></p>
+                                <a href="https://simply.cash/" target="_blank" style="color: black"; onmouseover="this.style.color='white';" onmouseout="this.style.color='black';"><h3>simply cash</h3></a>
+                                <p>Mobile wallet with cold storage solution for bsv</p>
                             </div>
                             <!-- Add more project boxes as needed -->
                         </div>
