--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="container">
             <div class="hero-content">
                 <h1>hodlbsv</h1>
-                <p>hodlbsv is an organization not based in zug switzerland that supports bitcoin by buying and locking up bsv</p>
+                <p>hodlbsv is an association not based in zug switzerland that supports bitcoin by buying and locking up bsv</p>
                 <a href="https://changelly.com/" target=“_blank” class="btn btn-primary">BUY BSV</a>
                 <a href="https://www.hodlocker.com/" target=“_blank” class="btn btn-secondary">LOCK BSV</a>
 
