--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="container">
             <div class="feature">
                 <img src="feature1.jpg" alt="">
-                <a href=https://hodlnet.sh/search?q=number+go+up target="_blank" style="text-decoration:none;color:white;""><h2>number go up tech</h2></a>
+                <a href=https://hodlnet.sh/search?q=number+go+up target="_blank" style="text-decoration:none;color:white;"><h2>number go up tech</h2></a>
                 <p>the number one marketing tool for any blockchain is the token price going up</p>
             </div>
             <div class="feature">
@@ -50,8 +50,8 @@
 
             <div class="feature">
                 <img src="feature2.jpg" alt="">
-                <h2>beginners guide to bitcoin sv</h2>
-                <p>what bsv is and why you will buy it</p>
+                <a href=buybsv.html style="text-decoration:none; color: white;"><h2>how to buy bsv</h2></a>
+                <p>best platforms to use depending on country and kyc vs nonkyc options</p>
             </div>
 
             <div class="feature">
@@ -73,7 +73,7 @@
 
             <div class="feature">
                 <img src="feature3.jpg" alt="">
-                <h2>farming btc</h2>
+                <a href=https://www.hodlocker.com/bitcoiner/post/e8c6e7844ed89512871e660930175347336e1060540fa41e58727c30e29d86d3 target="_blank" style="text-decoration:none;color:white;"><h2>farming btc</h2></a>
                 <p>farm btc to buy bsv</p>
             </div>
 
@@ -85,7 +85,7 @@
 
             <div class="feature">
                 <img src="feature3.jpg" alt="">
-                <h2>hyperbitcoinization trilogy</h2>
+                <a href=https://www.hodlocker.com/bitcoiner/post/1ed8d9936107c458bdadba58af94011b64ce790dfc2e67c5cf175bbf38ec5dfd target="_blank" style="text-decoration:none;color:white;"><h2>hyperbitcoinization trilogy</h2></a>
                 <p>what hyperbitcoinization is and how to trigger it</p>
             </div>
 
@@ -187,7 +187,7 @@
                             <div class="project-box">
                                 <img src="project3.png" alt="">
                                 <a href="https://babel.markets/" target="_blank"> <h3>babel markets</h3></a>
-                                <p>>Another interface for bitcoin's shared orderbook</p>
+                                <p>Another interface for bitcoin's shared orderbook</p>
                             </div>
                             <div class="project-box bg-gold">
                                 <img src="project4.png" alt="">
