--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="hero-content">
                 <h1>hodlbsv</h1>
                 <p>hodlbsv is an association not based in zug switzerland that supports bitcoin by buying and locking up bsv</p>
-                <a href="https://changelly.com/" target=“_blank” class="btn btn-primary">BUY BSV</a>
+                <a href="buybsv.html" class="btn btn-primary">BUY BSV</a>
                 <a href="https://www.hodlocker.com/" target=“_blank” class="btn btn-secondary">LOCK BSV</a>
 
             </div>
@@ -39,18 +39,18 @@
         <div class="container">
             <div class="feature">
                 <img src="feature1.jpg" alt="">
-                <a href=https://hodlnet.sh/search?q=number+go+up target="_blank" style="text-decoration:none;color:white;"><h2>number go up tech</h2></a>
+                <a href="https://hodlnet.sh/search?q=number+go+up" target="_blank" style="text-decoration:none;color:white;"><h2>number go up tech</h2></a>
                 <p>the number one marketing tool for any blockchain is the token price going up</p>
             </div>
             <div class="feature">
                 <img src="feature2.jpg" alt="">
-                <a href=https://hodlnet.sh/search?q=degen target="_blank" style="text-decoration:none; color: white;"><h2>necessity of degen culture</h2></a>
+                <a href="https://hodlnet.sh/search?q=degen" target="_blank" style="text-decoration:none; color: white;"><h2>necessity of degen culture</h2></a>
                 <p>memecoins are lottery tickets we like to play</p>
             </div>
 
             <div class="feature">
                 <img src="feature2.jpg" alt="">
-                <a href=buybsv.html style="text-decoration:none; color: white;"><h2>how to buy bsv</h2></a>
+                <a href="buybsv.html" style="text-decoration:none; color: white;"><h2>how to buy bsv</h2></a>
                 <p>best platforms to use depending on country and kyc vs nonkyc options</p>
             </div>
 
@@ -73,7 +73,7 @@
 
             <div class="feature">
                 <img src="feature3.jpg" alt="">
-                <a href=https://www.hodlocker.com/bitcoiner/post/e8c6e7844ed89512871e660930175347336e1060540fa41e58727c30e29d86d3 target="_blank" style="text-decoration:none;color:white;"><h2>farming btc</h2></a>
+                <a href="https://www.hodlocker.com/bitcoiner/post/e8c6e7844ed89512871e660930175347336e1060540fa41e58727c30e29d86d3" target="_blank" style="text-decoration:none;color:white;"><h2>farming btc</h2></a>
                 <p>farm btc to buy bsv</p>
             </div>
 
@@ -85,7 +85,7 @@
 
             <div class="feature">
                 <img src="feature3.jpg" alt="">
-                <a href=https://www.hodlocker.com/bitcoiner/post/1ed8d9936107c458bdadba58af94011b64ce790dfc2e67c5cf175bbf38ec5dfd target="_blank" style="text-decoration:none;color:white;"><h2>hyperbitcoinization trilogy</h2></a>
+                <a href="https://www.hodlocker.com/bitcoiner/post/1ed8d9936107c458bdadba58af94011b64ce790dfc2e67c5cf175bbf38ec5dfd" target="_blank" style="text-decoration:none;color:white;"><h2>hyperbitcoinization trilogy</h2></a>
                 <p>what hyperbitcoinization is and how to trigger it</p>
             </div>
 
