--- a/buybsv.html
+++ b/buybsv.html
@@ -25,10 +25,13 @@
 
     <article class="article">
         <div class="container">
+            <a href="index.html"><img src="images/chevron-left-white.svg"></a>          
+            <br>
+            <br>
                             <h1 class="article-title">How to Buy BSV</h1>
                         
                             <p>
-                            If you want to buy in size (more than $20k) then you should first buy <a href=https://www.coinbase.com/how-to-buy/tether target="_blank">USDT</a> and then use one of the centralized exchanges below to buy BSV
+                            If you want to buy in size (more than $20k) then you should first buy <a href="https://www.coinbase.com/how-to-buy/tether" target="_blank">USDT</a> and then use one of the centralized exchanges below to buy BSV
                             </p>
                             <br>
                             <p>
