--- a/buybsv.html
+++ b/buybsv.html
@@ -32,7 +32,7 @@
                             <h1 class="article-title">How to Buy BSV</h1>
                         
                             <p>
-                            If you want to buy in size (more than $20k) then you should first buy <a href="https://www.coinbase.com/how-to-buy/tether" target="_blank">USDT</a> and then use one of the centralized exchanges below to buy BSV
+                            If you want to buy more than ~$20k then you should first buy <a href="https://www.coinbase.com/how-to-buy/tether" target="_blank">USDT</a> and then use one of the centralized exchanges below to buy BSV
                             </p>
                             <br>
                             <p>
