--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="container">
             <div class="feature">
                 <img src="feature1.jpg" alt="">
-                <a href="https://hodlnet.sh/search?q=number+go+up" target="_blank" style="text-decoration:none;color:white;"><h2>number go up tech</h2></a>
+                <a href="https://hodlnet.sh/search?q=number+go+up" target="_blank" style="text-decoration:none; color:white;"><h2>number go up tech</h2></a>
                 <p>the number one marketing tool for any blockchain is the token price going up</p>
             </div>
             <div class="feature">
@@ -216,6 +216,11 @@
                                 <img src="project4.png" alt="">
                                 <a href="https://simply.cash/" target="_blank" style="color: black"; onmouseover="this.style.color='white';" onmouseout="this.style.color='black';"><h3>simply cash</h3></a>
                                 <p>Mobile wallet with cold storage solution for bsv</p>
+                            </div>
+                            <div class="project-box">
+                                <img src="project3.png" alt="">
+                                <a href="https://lockmarks.com/" target="_blank"><h3>lockmarks</h3></a>
+                                <p>Use locks to curate the best links on the internet</p>
                             </div>
                             <!-- Add more project boxes as needed -->
                         </div>
