--- a/index.html
+++ b/index.html
@@ -37,30 +37,30 @@
     <section id="features">
     <section class="features">
         <div class="container">
-            <div class="feature">
+            <div class="articlelink">
                 <img src="feature1.jpg" alt="">
                 <a href="https://hodlnet.sh/search?q=number+go+up" target="_blank" style="text-decoration:none; color:white;"><h2>number go up tech</h2></a>
                 <p>the number one marketing tool for any blockchain is the token price going up</p>
             </div>
 
-            <div class="feature">
+            <div class="articlelink">
                 <img src="feature2.jpg" alt="">
                 <a href="buybsv.html" style="text-decoration:none; color: white;"><h2>how to buy bsv</h2></a>
                 <p>best platforms to use depending on country and kyc vs nonkyc options</p>
             </div>
 
-            <div class="feature">
+            <div class="articlelink">
                 <img src="feature2.jpg" alt="">
                 <a href="https://hodlnet.sh/search?q=degen" target="_blank" style="text-decoration:none; color: white;"><h2>necessity of degen culture</h2></a>
                 <p>memecoins are lottery tickets we like to play</p>
             </div>
 
-            <div class="feature">
+            <div class="articlelink">
                 <img src="feature3.jpg" alt="">
-                <h2>lock and hodl</h2>
-                <p>if you have number go up tech you won't wanna sell</p>
+                <a href="https://www.hodlocker.com/bitcoiner/post/944ea6b6c1361c4e306cf47a42a5b0d2ae54d60ca0462fb35a7bddc072a0ee10" target="_blank" style="text-decoration:none; color: white;"><h2>your job is to buy more bitcoin</h2></a>
+                <p>owning more bitcoin is orders of magnitude more useful than doing anything else</p>
             </div>
-            
+
             <div class="feature">
                 <img src="feature3.jpg" alt="">
                 <h2>$100 million per bsv bull case</h2>
@@ -73,7 +73,7 @@
                 <p>alpha seeking using the snl framework of simple new liquid</p>
             </div>
 
-            <div class="feature">
+            <div class="articlelink">
                 <img src="feature3.jpg" alt="">
                 <a href="https://www.hodlocker.com/bitcoiner/post/e8c6e7844ed89512871e660930175347336e1060540fa41e58727c30e29d86d3" target="_blank" style="text-decoration:none;color:white;"><h2>farming btc</h2></a>
                 <p>farm btc to buy bsv</p>
@@ -85,7 +85,7 @@
                 <p>every ten minutes is a new competition</p>
             </div>
 
-            <div class="feature">
+            <div class="articlelink">
                 <img src="feature3.jpg" alt="">
                 <a href="https://www.hodlocker.com/bitcoiner/post/1ed8d9936107c458bdadba58af94011b64ce790dfc2e67c5cf175bbf38ec5dfd" target="_blank" style="text-decoration:none;color:white;"><h2>hyperbitcoinization trilogy</h2></a>
                 <p>what hyperbitcoinization is and how to trigger it</p>
@@ -153,77 +153,78 @@
                     <div class="container">
                         <h2>bsv lockapps</h2>
                         <div class="project-grid">
-                            <div class="project-box">
+                            <a href="https://www.hodlocker.com/" target="_blank" class="project-box" style="text-decoration:none">
                                 <img src="project1.png" alt="">
-                               <a href="https://www.hodlocker.com/" target="_blank"><h3>hodlocker</h3></a>
+                                <h3>hodlocker</h3>
                                <p>Enter the center of bitcoin - don't get psyop'd </p>
-                            </div>
-                            <div class="project-box bg-gold">
+                            </a>
+                            <a href="https://www.yours.org/" target="_blank" class="project-box bg-gold" style="text-decoration:none">
                                 <img src="project2.png" alt="">
-                                <h3><a href="https://yours.org/" target="_blank" style="color: black"; onmouseover="this.style.color='white';" onmouseout="this.style.color='black';">yours wallet</h3></a>
+                                <h3>yours wallet</h3>
                             <p>Open sourced web3 wallet - Yours.org is yours</p>                            
-                            </div>
-                            <div class="project-box">
+                            </a>
+                            <a href="https://hodlnet.sh/" target="_blank" class="project-box" style="text-decoration:none">
                                 <img src="project3.png" alt="">
-                                <a href="https://hodlnet.sh/" target="_blank"><h3>hodlnet</h3></a>
+                                <h3>hodlnet</h3>
                                 <p>Lightning fast search engine for locked content</p>
-                            </div>
-                            <div class="project-box bg-gold">
+                            </a>
+                            <a href="https://flipbtc.xyz/" target="_blank" class="project-box bg-gold" style="text-decoration:none">
                                 <img src="project4.png" alt="">
-                                <a href="https://flipbtc.xyz/" target="_blank" style="color: black"; onmouseover="this.style.color='white';" onmouseout="this.style.color='black';"><h3>flip btc</h3></a>
+                                <h3>flip btc</h3>
                                 <p>Will BSV flip BTC? Bet on it with options that can never be censored</p>
-                            </div>
+                            </a>
 
-                            <div class="project-box">
+                            <a href="https://simply-stream.vercel.app/" target="_blank" class="project-box" style="text-decoration:none">
                                 <img src="project1.png" alt="">
-                                <a href="https://simply-stream.vercel.app/" target="_blank"><h3>simply stream</h3></a>
+                                <h3>simply stream</h3>
                                 <p>Receive a daily stream of your locked bitcoins for retirement</p>
-                            </div>
+                            </a>
 
-                            <div class="project-box bg-gold">
+                            <a href="https://taleofshua.com/" target="_blank" class="project-box bg-gold" style="text-decoration:none">
                                 <img src="project2.png" alt="">
-                                <a href="https://taleofshua.com/" target="_blank" style="color: black"; onmouseover="this.style.color='white';" onmouseout="this.style.color='black';"><h3>tale of shua</h3></a>
+                                <h3>tale of shua</h3>
                                 <p>Marketplace interface for bitcoin's shared orderbook</p>
-                            </div>
+                            </a>
 
-                            <div class="project-box">
+                            <a href="https://babel.markets/" target="_blank" class="project-box" style="text-decoration:none">
                                 <img src="project3.png" alt="">
-                                <a href="https://babel.markets/" target="_blank"> <h3>babel markets</h3></a>
+                                <h3>babel markets</h3>
                                 <p>Another interface for bitcoin's shared orderbook</p>
-                            </div>
-                            <div class="project-box bg-gold">
+                            </a>
+
+                            <a href="https://maplocks.com/" target="_blank" class="project-box bg-gold" style="text-decoration:none">
                                 <img src="project4.png" alt="">
-                                <a href="https://maplocks.com/" target="_blank" style="color: black"; onmouseover="this.style.color='white';" onmouseout="this.style.color='black';"><h3>maplocks</h3></a>
+                                <h3>maplocks</h3>
                                 <p>Lock bitcoins to real world locations</p>
-                            </div>
+                            </a>
 
-                            <div class="project-box">
+                            <a href="https://locktomint.com/" target="_blank" class="project-box" style="text-decoration:none">
                                 <img src="project1.png" alt="">
-                                <a href="https://locktomint.com/" target="_blank"><h3>locktomint</h3></a>
+                                <h3>locktomint</h3>
                                 <p>Receive fungible shitcoins for locking bitcoins</p>
-                            </div>
+                            </a>
 
-                            <div class="project-box bg-gold">
+                            <a href="https://taleofshua.com/profile" target="_blank" class="project-box bg-gold" style="text-decoration:none">
                                 <img src="project2.png" alt="">
-                                <a href="https://taleofshua.com/" target="_blank" style="color: black"; onmouseover="this.style.color='white';" onmouseout="this.style.color='black';"><h3>shuallet</h3></a>
+                                <h3>shuallet</h3>
                                 <p>Basic wallet that works for mobile</p>
-                            </div>
+                            </a>
 
-                            <div class="project-box">
+                            <a href="https://relayx.com/" target="_blank" class="project-box" style="text-decoration:none">
                                 <img src="project3.png" alt="">
-                                <a href="https://relayx.com/" target="_blank"><h3>relayx</h3></a>
+                                <h3>relayx</h3>
                                 <p>Website is shutting down lol</p>
-                            </div>
-                            <div class="project-box bg-gold">
+                            </a>
+                            <a href="https://simply.cash/" target="_blank" class="project-box bg-gold" style="text-decoration:none">
                                 <img src="project4.png" alt="">
-                                <a href="https://simply.cash/" target="_blank" style="color: black"; onmouseover="this.style.color='white';" onmouseout="this.style.color='black';"><h3>simply cash</h3></a>
+                                <h3>simply cash</h3>
                                 <p>Mobile wallet with cold storage solution for bsv</p>
-                            </div>
-                            <div class="project-box">
+                            </a>
+                            <a href="https://lockmarks.com/" target="_blank" class="project-box" style="text-decoration:none">
                                 <img src="project3.png" alt="">
-                                <a href="https://lockmarks.com/" target="_blank"><h3>lockmarks</h3></a>
+                                <h3>lockmarks</h3>
                                 <p>Use locks to curate the best links on the internet</p>
-                            </div>
+                            </a>
                             <!-- Add more project boxes as needed -->
                         </div>
                     </div>
