--- a/buybsv.html
+++ b/buybsv.html
@@ -16,7 +16,7 @@
                 </div>
                 <ul class="nav-links">
                     <li><a href="https://www.hodlbsv.org/#features">articles</a></li>
-                    <li><a href="https://www.hodlbsv.org/#memes">memes</a></li>
+                    <li><a href="memes.html">memes</a></li>
                     <li><a href="https://www.hodlbsv.org/#lockapps">lockapps</a></li>
                     <li><a href="https://taleofshua.com/market/hodl/" target=“_blank”>$hodl</a></li>
                 </ul>
