--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 </div>
                 <ul class="nav-links">
                     <li><a href="#features">articles</a></li>
-                    <li><a href="#memes">memes</a></li>
+                    <li><a href="memes.html">memes</a></li>
                     <li><a href="#lockapps">lockapps</a></li>
                     <li><a href="https://taleofshua.com/market/hodl/" target=“_blank”>$hodl</a></li>
                 </ul>
@@ -108,43 +108,6 @@
                 <h2>sha256 has won</h2>
                 <p>network effects and why only bitcoin itself can flip btc</p>
             </div>
-            </div>
-        </section>
-
-        <section id="memes" class="memes">
-            <div class="container">
-                <h2>memes</h2>
-                <div class="meme">
-                <img src="images/dontshoot.jpg" alt="">
-                </div>
-                <div class="meme">
-                <img src="images/greenlines.jpg" alt="">
-                </div>
-                <div class="meme">
-                    <img src="images/notselling.jpg" alt="">
-                </div>
-                <div class="meme">
-                    <img src="images/bitcoinscaledversion.jpg" alt="">
-                </div>
-                <div class="meme">
-                    <img src="images/longlock.jpg" alt="">
-                </div>
-                <div class="meme">
-                    <img src="images/jekliuhousebet.jpg" alt="">
-                </div>
-                <div class="meme">
-                    <img src="images/mcap.jpg" alt="">
-                </div>
-                <div class="meme">
-                    <img src="images/harrypotter.jpg" alt="">
-                </div>
-                <div class="meme">
-                    <img src="images/regarded.jpg" alt="">
-                </div>
-                <div class="meme">
-                    <img src="images/raisebtcblock.jpg" alt="">
-                </div>
-                <!-- Add more meme divs as needed -->
             </div>
         </section>
 
