--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Article Page</title>
+    <title>How to Buy BSV</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/png" href="images/favicon.png">
 </head>
@@ -15,10 +15,10 @@
                     <!-- <a href="#"><img src="images/logo.png" alt="hodlbsv logo"></a> -->
                 </div>
                 <ul class="nav-links">
-                    <li><a href="index.html">home</a></li>
-                    <li><a href="about.html">about</a></li>
-                    <li><a href="https://changelly.com/" target=“_blank”>buy bsv</a></li>
-                    <li><a href="https://taleofshua.com/market/hodl/" target=“_blank”>buy hodl</a></li>
+                    <li><a href="https://www.hodlbsv.org/#features">articles</a></li>
+                    <li><a href="memes.html">memes</a></li>
+                    <li><a href="https://www.hodlbsv.org/#lockapps">lockapps</a></li>
+                    <li><a href="https://taleofshua.com/market/hodl/" target=“_blank”>$hodl</a></li>
                 </ul>
             </div>
         </nav>
@@ -33,3 +33,17 @@
 
 </body>
 </html>
+
+                    <!-- Footer -->
+                    <footer>
+                        <nav class="navbar">
+                            <div class="container">
+                                <div class="logo">
+                                    <!-- <a href="#"><img src="images/logo.png" alt="hodlbsv logo"></a> -->
+                                </div>
+                                <ul class="nav-links">
+                                    <p style="color:grey">site built by regards for regards</p>
+                                </ul>
+                            </div>
+                        </nav>
+                    </footer>
